--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -24,6 +24,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="App" asp-action="ConfirmMail">Auth</a>
+                        </li>
+                            @if (User.Identity is {IsAuthenticated: true })
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="App" asp-action="Logout">LogOut</a>
+                                </li>
+                            }
                     </ul>
                 </div>
             </div>
