--- a/Website/Views/Authenticate/EnterPassword.cshtml
+++ b/Website/Views/Authenticate/EnterPassword.cshtml
@@ -3,10 +3,9 @@
     Layout = null;
 }
 <h3>Авторизация</h3>
-<form asp-action="EnterPassword" asp-controller="App" asp-anti-forgery="true">
+<form id="auth-form" asp-action="EnterPassword" asp-controller="Authenticate" asp-anti-forgery="true">
     <input type="hidden" asp-for="IsAuth" />
     <input type="hidden" asp-for="MailAddress" />
     <input placeholder="Пароль" type="text" asp-for="Password" />
-    <input type="submit" value="Войти" />
+    <input onclick="ConfirmPassword()" type="submit" value="Войти" />
 </form>
-<div asp-validation-summary="All"></div>
