--- a/Website/wwwroot/Resources/css/auth.css
+++ b/Website/wwwroot/Resources/css/auth.css
@@ -14,12 +14,13 @@ body{
     text-align: center;  
     min-height: 100vh;
 }
-.auth{
+.auth {
     flex-direction: column;
 }
-.auth h3{
+.auth h3 {
     font-size: 30px;
     margin: 0;
+    /*animation: anim 1s linear;*/
 }
 .link{
 
@@ -29,7 +30,6 @@ body{
     transform: translateX(-50%);
     text-decoration: none;
     color: rgb(180,180,180);
-    transition: .1s linear;
 }
 .auth a:hover{
     color: rgb(100,100,100);
@@ -38,7 +38,7 @@ body{
     display: flex;
     flex-direction: column;
 }
-.auth-input{
+.auth-input {
     height: 40px;
     box-sizing: border-box;
     outline: none;
@@ -50,8 +50,8 @@ body{
     background-color: rgb(242,242,242);
     box-shadow: 0 0 14px 1px rgba(232,232,232, 0.7);
 }
-.auth-input::placeholder{
-
+.auth-input::-webkit-input-placeholder {
+    /*animation: anim 1s linear;*/
 }
 .auth-row{
     width: 100%;
@@ -66,7 +66,51 @@ body{
     position: absolute;
     left: 100%;
 }
-.rightOf{
+.auth-user {
+    width: 0;
+    display: flex;
+    align-items: center;
+    color: #3c3c3c;
+    margin-right: 20px;
+    padding: 0;
+    transition: 1s linear;
+    text-align: left;
+    min-width: 40px;
+    overflow: hidden;
+    cursor: default;
+}
+.auth-user-clicked {
+    animation: scaledClick .2s linear;
+}
+@keyframes scaledClick {
+    50% {
+        transform: scale(1.1);
+    }
+}
+.auth-user-logo {
+    fill: #d2d2d2;
+    stroke: transparent;
+    border: 2px;
+    stroke-width: 10;
+    height: 100%;
+    width: 28px;
+    margin: 0 6px;
+}
+.auth-user-title {
+    overflow: hidden;
+    white-space: nowrap;
+    /*transition: .5s linear;*/
+    position: absolute;
+    left: 40px;
+}
+.auth-user-title-hidden {
+    /*left: 100%;*/
+}
+.leftOf {
+    position: absolute;
+    right: 100%;
+}
+.rightOf {
     position: absolute;
     left: 100%;
 }
@@ -119,4 +163,13 @@ body{
 }
 .pointer{
     cursor: pointer;
+}
+@keyframes anim {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
