--- a/Website/wwwroot/Resources/css/auth.css
+++ b/Website/wwwroot/Resources/css/auth.css
@@ -17,9 +17,15 @@ body{
 .auth {
     flex-direction: column;
 }
-.auth h3 {
+h3 {
     font-size: 30px;
     margin: 0;
+    cursor: default;
+    /*animation: anim 1s linear;*/
+}
+h4 {
+    margin: 0;
+    cursor: default;
     /*animation: anim 1s linear;*/
 }
 .link{
@@ -34,10 +40,26 @@ body{
 .auth a:hover{
     color: rgb(100,100,100);
 }
-.auth-form{
+.auth-form {
     display: flex;
     flex-direction: column;
+    gap: 40px;
 }
+.auth-section {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+}
+.auth-form .auth-section:nth-of-type(1){
+    margin-top: 0;
+}
+.auth-form-horizontal {
+    flex-direction: row;
+}
+.auth-form-horizontal .auth-section:nth-of-type(1) {
+        margin-top: 20px;
+    }
 .auth-input {
     height: 40px;
     box-sizing: border-box;
@@ -49,6 +71,13 @@ body{
     font-size: 16px;
     background-color: rgb(242,242,242);
     box-shadow: 0 0 14px 1px rgba(232,232,232, 0.7);
+    margin-left: auto;
+    margin-right: auto;
+}
+.auth-input-title {
+    margin: auto;
+    color: #707070;
+    pointer-events: none;
 }
 .auth-input::-webkit-input-placeholder {
     /*animation: anim 1s linear;*/
@@ -58,13 +87,7 @@ body{
     position: relative;
     display: flex;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-}
-.validation-summary-errors, .validation-summary-valid {
-    position: absolute;
-    left: 100%;
+    justify-content: stretch;    
 }
 .auth-user {
     width: 0;
@@ -114,11 +137,16 @@ body{
     position: absolute;
     left: 100%;
 }
+
+.field-validation-error, .field-validation-valid {
+    position: absolute;
+    left: 100%;
+}
 .validation-summary-errors ul, .validation-summary-valid ul {
     padding: 0;
 }
 
-.auth-error{
+.auth-error, .field-validation-error, .field-validation-valid {
     text-align: left;
     color: rgb(255, 119, 119);
     margin-left: 10px;
@@ -127,11 +155,11 @@ body{
     white-space: nowrap;
     width: 0;
 }
+.field-validation-error-visible {
+    width: 150px;
+}
 .span-error{
 
-}
-.auth-error-visible{
-    width: 150px;
 }
 .auth-btn {
     font-size: 16px;
@@ -144,8 +172,8 @@ body{
     background-color: rgb(50,50,50);
     box-shadow: 0 0 6px 1px rgba(50,50,50);
     color: rgb(220,220,220);
-    margin: 0 30px;
-    width: 100%;
+    margin: 0 auto;
+    /*width: 100%;*/
     transition: .2s linear;
 }
 .auth-btn:disabled{
@@ -158,6 +186,7 @@ body{
     box-shadow: 0 0 6px 1px rgba(20,20,20);
     color: rgb(242,242,242);
 }
+    
 .input-warn{
     border-color: red;
 }
@@ -173,3 +202,18 @@ body{
         opacity: 1;
     }
 }
+.variant-two {
+    margin-right: 0;
+    width: 100%;
+    padding-left: 90px;
+}
+.variant-two:before {
+    content: "te";
+}
+
+    .auth-input-title-two {
+        position: absolute;
+        left: 20px;
+        pointer-events: none;
+        color: #707070;
+    }
