--- a/Website/Views/Profile/PostView.cshtml
+++ b/Website/Views/Profile/PostView.cshtml
@@ -1,4 +1,7 @@
 ﻿@model WriteMe.Database.DAL.Entities.Post
+@{
+    Layout = null;
+}
 <li class="post">
     <div class="post_header">
         <div class="post_owner">
